lib: sw_apps: Add custom APP_NAME for target
1) Updated the CMakeLists.txt to have custom APP_NAME variable instead
of hardcoded target name.
2) Improved yaml title documentation (Removed Binding for string)

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/empty_application/data/empty_application.yaml
+++ b/lib/sw_apps/empty_application/data/empty_application.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for empty application
+title: empty application
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
