--- a/lib/sw_apps/freertos_lwip_echo_server/src/CMakeLists.txt
+++ b/lib/sw_apps/freertos_lwip_echo_server/src/CMakeLists.txt
@@ -11,7 +11,8 @@ set(USER_LINKER_FLAGS
 )
 ####    END OF USER SETTINGS    ####
 include(${CMAKE_CURRENT_SOURCE_DIR}/Freertos_lwip_echo_serverExample.cmake)
-project(freertos_lwip_echo_server)
+set(APP_NAME freertos_lwip_echo_server)
+project(${APP_NAME})
 
 find_package(common)
 include(${CMAKE_SOURCE_DIR}/freertos_lwip_echo_server.cmake NO_POLICY_SCOPE)
@@ -29,8 +30,8 @@ SET(SOURCES echo.c;main.c;iic_phyreset.c;)
 linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
 string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
-add_executable(freertos_lwip_echo_server.elf ${SOURCES})
-target_link_libraries(freertos_lwip_echo_server.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+add_executable(${APP_NAME}.elf ${SOURCES})
+target_link_libraries(${APP_NAME}.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 if (${NON_YOCTO})
     set(INCLUDE_DIRS
         "${CMAKE_INCLUDE_PATH}/"
@@ -38,7 +39,7 @@ if (${NON_YOCTO})
         "${CMAKE_BINARY_DIR}/include")
     message("include dirs")
     message("${INCLUDE_DIRS}")
-    target_include_directories(freertos_lwip_echo_server.elf PUBLIC ${INCLUDE_DIRS})
+    target_include_directories(${APP_NAME}.elf PUBLIC ${INCLUDE_DIRS})
 else()
-    target_include_directories(freertos_lwip_echo_server.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
+    target_include_directories(${APP_NAME}.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
 endif()
