--- a/lib/sw_apps/freertos_lwip_tcp_perf_server/data/freertos_lwip_tcp_perf_server.yaml
+++ b/lib/sw_apps/freertos_lwip_tcp_perf_server/data/freertos_lwip_tcp_perf_server.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for freertos lwip perf server
+title: freertos lwip perf server
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
