--- a/lib/sw_apps/lwip_tcp_perf_client/data/lwip_tcp_perf_client.yaml
+++ b/lib/sw_apps/lwip_tcp_perf_client/data/lwip_tcp_perf_client.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for lwip tcp perf client
+title: lwip tcp perf client
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
