--- a/lib/sw_apps/versal_plm/data/versal_plm.yaml
+++ b/lib/sw_apps/versal_plm/data/versal_plm.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for Versal PLM application
+title: Versal PLM
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
