--- a/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
+++ b/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for Versal PSMFW application
+title: Versal PSMFW
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
