--- a/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
@@ -11,7 +11,8 @@ set(USER_LINKER_FLAGS
 )
 ####    END OF USER SETTINGS    ####
 include_directories(${CMAKE_BINARY_DIR}/include)
-project(zynqmp_fsbl)
+set(APP_NAME zynqmp_fsbl)
+project(${APP_NAME})
 
 find_package(common)
 enable_language(C ASM)
@@ -53,11 +54,11 @@ else()
 endif()
 string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
-add_executable(zynqmp_fsbl.elf ${S_SOURCES} ${SOURCES})
+add_executable(${APP_NAME}.elf ${S_SOURCES} ${SOURCES})
 
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53")
     OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64"))
-target_link_libraries(zynqmp_fsbl.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript_a53.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript_a53.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
 else()
-target_link_libraries(zynqmp_fsbl.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
 endif()
