--- a/lib/sw_apps/freertos_hello_world/src/CMakeLists.txt
+++ b/lib/sw_apps/freertos_hello_world/src/CMakeLists.txt
@@ -13,7 +13,8 @@ set(USER_LINKER_FLAGS
 ####    END OF USER SETTINGS    ####
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/Freertos_hello_worldExample.cmake)
-project(freertos_hello_world)
+set(APP_NAME freertos_hello_world)
+project(${APP_NAME})
 
 find_package(common)
 enable_language(C ASM)
@@ -30,5 +31,5 @@ collector_list (_sources PROJECT_LIB_SOURCES)
 linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
 string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
-add_executable(freertos_hello_world.elf ${_sources})
-target_link_libraries(freertos_hello_world.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+add_executable(${APP_NAME}.elf ${_sources})
+target_link_libraries(${APP_NAME}.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
