--- a/lib/sw_apps/freertos_lwip_tcp_perf_server/src/CMakeLists.txt
+++ b/lib/sw_apps/freertos_lwip_tcp_perf_server/src/CMakeLists.txt
@@ -3,7 +3,8 @@
 cmake_minimum_required(VERSION 3.14.7)
 include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include(${CMAKE_CURRENT_SOURCE_DIR}/Freertos_lwip_tcp_perf_serverExample.cmake)
-project(freertos_lwip_tcp_perf_server)
+set(APP_NAME freertos_lwip_tcp_perf_server)
+project(${APP_NAME})
 
 include(${CMAKE_SOURCE_DIR}/../data/freertos_lwip_tcp_perf_server.cmake NO_POLICY_SCOPE)
 enable_language(C ASM)
@@ -17,7 +18,14 @@ collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
 SET(SOURCES main.c;iic_phyreset.c;freertos_tcp_perf_server.c;)
-linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/../../../../scripts/linker_files/")
-add_executable(freertos_lwip_tcp_perf_server.elf ${SOURCES})
-target_link_libraries(freertos_lwip_tcp_perf_server.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
-target_include_directories(freertos_lwip_tcp_perf_server.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
+linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
+add_executable(${APP_NAME}.elf ${SOURCES})
+target_link_libraries(${APP_NAME}.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_include_directories(${APP_NAME}.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
+if (${NON_YOCTO})
+   set (INCLUDE_DIRS
+       "${CMAKE_INCLUDE_PATH}"
+       "${CMAKE_INCLUDE_PATH}/include/"
+       "${CMAKE_BINARY_DIR}/include")
+  target_include_directories(${APP_NAME}.elf PUBLIC ${INCLUDE_DIRS})
+endif()
