--- a/lib/sw_apps/zynqmp_fsbl/data/zynqmp_fsbl.yaml
+++ b/lib/sw_apps/zynqmp_fsbl/data/zynqmp_fsbl.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for ZynqMP FSBL application
+title: ZynqMP FSBL
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
