--- a/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
@@ -11,7 +11,8 @@ set(USER_LINKER_FLAGS
 )
 ####    END OF USER SETTINGS    ####
 include_directories(${CMAKE_BINARY_DIR}/include)
-project(pmufw)
+set(APP_NAME zynqmp_pmufw)
+project(${APP_NAME})
 
 find_package(common)
 enable_language(C ASM)
@@ -39,6 +40,6 @@ set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${D}${libdir})
 file(GLOB SOURCES "*.c")
 string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
-add_executable(pmufw.elf xpfw_start.S ${SOURCES})
-target_link_libraries(pmufw.elf -Wl,--no-relax -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mxl-soft-mul -Os -flto -ffat-lto-objects -Wl,--gc-sections -nostartfiles -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
+add_executable(${APP_NAME}.elf xpfw_start.S ${SOURCES})
+target_link_libraries(${APP_NAME}.elf -Wl,--no-relax -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mxl-soft-mul -Os -flto -ffat-lto-objects -Wl,--gc-sections -nostartfiles -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
 
