--- a/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
+++ b/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
@@ -17,11 +17,11 @@ properties:
 
 depends_libs:
     lwip211:
-        lwip_api_mode: SOCKET_API
-        lwip_dhcp_does_arp_check: ON
-        lwip_dhcp: ON
-        lwip_ipv6_enable: OFF
-        lwip_pbuf_pool_size: 2048
+        lwip211_api_mode: SOCKET_API
+        lwip211_dhcp_does_arp_check: ON
+        lwip211_dhcp: ON
+        lwip211_ipv6_enable: OFF
+        lwip211_pbuf_pool_size: 2048
     xiltimer:
         XILTIMER_en_interval_timer: ON
 
