--- a/lib/sw_apps/freertos_lwip_tcp_perf_server/src/platform_config.h.in
+++ b/lib/sw_apps/freertos_lwip_tcp_perf_server/src/platform_config.h.in
@@ -5,6 +5,11 @@
 #ifndef __PLATFORM_CONFIG_H_
 #define __PLATFORM_CONFIG_H_
 
+#include "FreeRTOS.h"
+#include "lwip/sys.h"
+#include "task.h"
+#include "arch/sys_arch.h"
+
 #cmakedefine PLATFORM_EMAC_BASEADDR @PLATFORM_EMAC_BASEADDR@
 
 #endif
