--- a/lib/sw_apps/freertos_lwip_udp_perf_client/data/freertos_lwip_udp_perf_client.yaml
+++ b/lib/sw_apps/freertos_lwip_udp_perf_client/data/freertos_lwip_udp_perf_client.yaml
@@ -15,6 +15,20 @@ properties:
   interrupts:
     description: Interrupt property of the controller
 
+depends_libs:
+    lwip211:
+        lwip211_api_mode: SOCKET_API
+        lwip211_dhcp_does_arp_check: ON
+        lwip211_dhcp: ON
+        lwip211_ipv6_enable: OFF
+        lwip211_pbuf_pool_size: 2048
+        lwip211_pbuf_pool_size: 16384
+        lwip211_n_tx_descriptors: 512
+        lwip211_memp_n_pbuf: 1024
+        lwip211_mem_size: 524288
+    xiltimer:
+        XILTIMER_en_interval_timer: ON
+
 supported_processors:
     - psu_cortexa53
     - psu_cortexr5
