--- a/lib/sw_apps/lwip_echo_server/data/lwip_echo_server.yaml
+++ b/lib/sw_apps/lwip_echo_server/data/lwip_echo_server.yaml
@@ -44,11 +44,11 @@ depends:
 
 depends_libs:
     lwip211:
-        lwip_api_mode: RAW_API
-        lwip_dhcp_does_arp_check: ON
-        lwip_dhcp: ON
-        lwip_ipv6_enable: OFF
-        lwip_pbuf_pool_size: 2048
+        lwip211_api_mode: RAW_API
+        lwip211_dhcp_does_arp_check: ON
+        lwip211_dhcp: ON
+        lwip211_ipv6_enable: OFF
+        lwip211_pbuf_pool_size: 2048
     xiltimer:
         XILTIMER_en_interval_timer: ON
 ...
