--- a/lib/bsp/standalone/src/common/CMakeLists.txt
+++ b/lib/bsp/standalone/src/common/CMakeLists.txt
@@ -33,7 +33,7 @@ collect (PROJECT_LIB_HEADERS xstatus.h)
 collect (PROJECT_LIB_SOURCES outbyte.c)
 collect (PROJECT_LIB_SOURCES inbyte.c)
 collect (PROJECT_LIB_HEADERS xmem_config.h)
-collect (PROJECT_LIB_HEADERS sleep.h)
+#collect (PROJECT_LIB_HEADERS sleep.h)
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblazeel") OR
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "plm_microblaze") OR
