lib: sw_apps: Use aux_source_directory() instead of *.c
Update the empty application and peripheral test CMakeLists.txt
to use aux_source_directory() API instead of *.c.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/empty_application/src/CMakeLists.txt
+++ b/lib/sw_apps/empty_application/src/CMakeLists.txt
@@ -23,7 +23,7 @@ collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
-file(GLOB SOURCES "*.c")
+aux_source_directory(${CMAKE_SOURCE_DIR} SOURCES)
 linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
 string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
