esw: Pull xiltimer by default for bsp
In the new sdt flow sleep related implementation is moved to xiltimer
library and it is needs to be pulled by default as sleep.h is available
in this library.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/hello_world/data/hello_world.yaml
+++ b/lib/sw_apps/hello_world/data/hello_world.yaml
@@ -9,6 +9,9 @@ maintainers:
 
 description: Let's say 'Hello World' in C.
 
+depends_libs:
+    xiltimer: {}
+
 supported_processors:
   - psu_cortexa53
   - psu_cortexr5
