esw: Fix sleep.h pulling for yocto flow
In yocto flow libxil get compiled first, few drivers
expects sleep.h to be present but with latest code xiltimer
is installing sleep.h which works for Vitis flow,To fix
yocto build issue pull sleep.h from standalone bsp for yocto flow.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/bsp/standalone/src/common/CMakeLists.txt
+++ b/lib/bsp/standalone/src/common/CMakeLists.txt
@@ -33,7 +33,9 @@ collect (PROJECT_LIB_HEADERS xstatus.h)
 collect (PROJECT_LIB_SOURCES outbyte.c)
 collect (PROJECT_LIB_SOURCES inbyte.c)
 collect (PROJECT_LIB_HEADERS xmem_config.h)
-#collect (PROJECT_LIB_HEADERS sleep.h)
+if (NOT ${NON_YOCTO})
+collect (PROJECT_LIB_HEADERS sleep.h)
+endif()
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblazeel") OR
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "plm_microblaze") OR
