XilinxProcessorIPLib: drivers: CMakeLists.txt: Fix CMAKE_SOURCE_DIR variable usage
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/CMakeLists.txt
@@ -10,7 +10,7 @@ FOREACH(DRIVER ${DRIVER_LIST})
     STRING(REGEX REPLACE "-" "_" DRIVER ${DRIVER})
     add_subdirectory(${DRIVER}/src)
     list(APPEND OBJS ${CMAKE_BINARY_DIR}/libsrc/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/*.obj)
-    subdirlist(SUBDIRS ${CMAKE_SOURCE_DIR}/${DRIVER}/src)
+    subdirlist(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/${DRIVER}/src)
     foreach(subdir ${SUBDIRS})
 	    list(APPEND OBJS ${CMAKE_BINARY_DIR}/libsrc/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/${subdir}/*.obj)
     endforeach()
