--- a/lib/sw_services/xilsecure/examples/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/examples/CMakeLists.txt
@@ -1,11 +1,11 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.14.7)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include(${CMAKE_CURRENT_SOURCE_DIR}/XilsecureExample.cmake)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xilsecure.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../src/xilsecure.cmake)
 project(xilsecure)
 
+find_package(common)
 enable_language(C ASM)
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
