common: Use QUIET option in find_package to suppress cmake configure warning
If the package configuration file cannot be found CMake will generate an
error describing the problem unless the QUIET argument is specified.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
@@ -11,14 +11,14 @@ else()
 set(INTC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(SCUGIC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 endif()
-find_package(INTC)
+find_package(INTC QUIET)
 list(APPEND defs "#ifndef XCOMMON_DRV_CONFIG_H_\n")
 list(APPEND defs "#define XCOMMON_DRV_CONFIG_H_\n\n")
 if (DRIVER_INSTANCES)
     list(APPEND defs "#define AXI_INTC\n")
 endif()
 
-find_package(SCUGIC)
+find_package(SCUGIC QUIET)
 if (DRIVER_INSTANCES)
     list(APPEND defs "#define XPAR_SCUGIC\n")
 endif()
