--- a/lib/sw_apps/freertos_hello_world/data/freertos_hello_world.yaml
+++ b/lib/sw_apps/freertos_hello_world/data/freertos_hello_world.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for freertos hello world application
+title: freertos hello world
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
