XilinxProcessorIPLib: drivers: CMakeLists.txt: Improve object collection
Instead of driver objects as *.obj, use the get_property and target
to get the list of target objects.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/CMakeLists.txt
@@ -9,10 +9,9 @@ find_package(DRVLIST)
 FOREACH(DRIVER ${DRIVER_LIST})
     STRING(REGEX REPLACE "-" "_" DRIVER ${DRIVER})
     add_subdirectory(${DRIVER}/src)
-    list(APPEND OBJS ${CMAKE_BINARY_DIR}/libsrc/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/*.obj)
-    subdirlist(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/${DRIVER}/src)
-    foreach(subdir ${SUBDIRS})
-	    list(APPEND OBJS ${CMAKE_BINARY_DIR}/libsrc/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/${subdir}/*.obj)
+    get_property(src_files TARGET ${DRIVER} PROPERTY SOURCES)
+    foreach(src ${src_files})
+        list(APPEND OBJS ${CMAKE_BINARY_DIR}/libsrc/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/${src}.obj)
     endforeach()
 ENDFOREACH()
 
