lib: sw_services: xiltimer: Generate sleep timer freqencey define
There are few applications dhrystone and zynqmp_dram_test which
requires sleep timer frequency value, this commit adds support
to generate define for the same.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_services/xiltimer/data/xiltimer.yaml
+++ b/lib/sw_services/xiltimer/data/xiltimer.yaml
@@ -33,6 +33,8 @@ supported_os:
 depends:
     tmrctr:
         - reg
+        - clock-frequency
     ttcps:
         - reg
+        - xlnx,clock-freq
 ...
