--- a/lib/sw_services/xiltimer/src/xtimer_config.h.in
+++ b/lib/sw_services/xiltimer/src/xtimer_config.h.in
@@ -5,10 +5,13 @@
 #ifndef _XTIMER_CONFIG_H
 #define _XTIMER_CONFIG_H
 
+@XPAR_INCLUDE@
+
 #cmakedefine XSLEEPTIMER_BASEADDRESS @XSLEEPTIMER_BASEADDRESS@
 #cmakedefine XSLEEPTIMER_IS_AXITIMER @XSLEEPTIMER_IS_AXITIMER@
 #cmakedefine XSLEEPTIMER_IS_TTCPS    @XSLEEPTIMER_IS_TTCPS@
 #cmakedefine XSLEEPTIMER_IS_SCUTIMER @XSLEEPTIMER_IS_SCUTIMER@
+#cmakedefine XSLEEPTIMER_FREQ	     @XSLEEPTIMER_FREQ@
 #cmakedefine XTIMER_IS_DEFAULT_TIMER @XTIMER_IS_DEFAULT_TIMER@
 
 #cmakedefine XTICKTIMER_BASEADDRESS @XTICKTIMER_BASEADDRESS@
