lib: sw_apps: Imrpove titile description in yaml
Update the yaml file title field description to inline with existing
vitis flow.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/empty_application/data/empty_application.yaml
+++ b/lib/sw_apps/empty_application/data/empty_application.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: empty application
+title: Empty Application
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
