--- a/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
+++ b/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: freertos lwip echo server
+title: FreeRTOS lwIP Echo Server
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
