--- a/lib/sw_apps/freertos_lwip_udp_perf_client/data/freertos_lwip_udp_perf_client.yaml
+++ b/lib/sw_apps/freertos_lwip_udp_perf_client/data/freertos_lwip_udp_perf_client.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: freertos lwip udp perf client
+title: FreeRTOS lwIP UDP Perf Client
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
