--- a/lib/sw_apps/hello_world/data/hello_world.yaml
+++ b/lib/sw_apps/hello_world/data/hello_world.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: hello world
+title: Hello World
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
