--- a/lib/sw_apps/lwip_tcp_perf_server/data/lwip_tcp_perf_server.yaml
+++ b/lib/sw_apps/lwip_tcp_perf_server/data/lwip_tcp_perf_server.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: lwip tcp perf server
+title: lwIP TCP Perf Server
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
