--- a/lib/sw_apps/lwip_udp_perf_server/data/lwip_udp_perf_server.yaml
+++ b/lib/sw_apps/lwip_udp_perf_server/data/lwip_udp_perf_server.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: lwip udp perf server
+title: lwIP UDP Perf Server
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
