--- a/lib/sw_apps/zynqmp_pmufw/data/zynqmp_pmufw.yaml
+++ b/lib/sw_apps/zynqmp_pmufw/data/zynqmp_pmufw.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: ZynqMP PMUFW
+title: ZynqMP PMU Firmware
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
