esw: Include toolchain headers in compile_commands.json file
Update the application and bsp CMakeListst.txt to include
toolchain headers when generating compile_commands.json file.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/dhrystone/src/CMakeLists.txt
+++ b/lib/sw_apps/dhrystone/src/CMakeLists.txt
@@ -24,6 +24,10 @@ collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+    set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
 collect (PROJECT_LIB_SOURCES platform.c)
 collect (PROJECT_LIB_SOURCES dhry_1.c)
 collect (PROJECT_LIB_SOURCES dhry_2.c)
