--- a/lib/sw_apps/freertos_lwip_tcp_perf_server/src/CMakeLists.txt
+++ b/lib/sw_apps/freertos_lwip_tcp_perf_server/src/CMakeLists.txt
@@ -17,6 +17,10 @@ collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+    set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
 SET(SOURCES main.c;iic_phyreset.c;freertos_tcp_perf_server.c;)
 linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
 add_executable(${APP_NAME}.elf ${SOURCES})
