--- a/lib/sw_apps/memory_tests/src/CMakeLists.txt
+++ b/lib/sw_apps/memory_tests/src/CMakeLists.txt
@@ -56,6 +56,10 @@ foreach(i RANGE ${index})
     endif()
 endforeach()
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/memory_config_g.c.in ${CMAKE_CURRENT_SOURCE_DIR}/memory_config_g.c)
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+    set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
 set(SOURCES memorytest.c;platform.c;memory_config_g.c)
 set(CMAKE_INFILE_PATH "${CMAKE_SOURCE_DIR}/linker_files/")
 linker_gen(${CMAKE_INFILE_PATH})
