--- a/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
@@ -43,6 +43,10 @@ list(PREPEND defs "#include \"xfsbl_hw.h\"\n\n")
 file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/psu_init.h "${defs}")
 endif()
 set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${D}${libdir})
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+    set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
 file(GLOB SOURCES "*.c")
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa72")
 	OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53")
