--- a/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
@@ -37,6 +37,10 @@ find_library(_lib_path ${_lib})
 collector_list (_deps PROJECT_LIB_DEPS)
 
 set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${D}${libdir})
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+    set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
 file(GLOB SOURCES "*.c")
 string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
