--- a/lib/sw_apps/zynqmp_dram_test/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_dram_test/src/CMakeLists.txt
@@ -23,6 +23,10 @@ collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+    set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
 collect (PROJECT_LIB_SOURCES xmt_common.c)
 collect (PROJECT_LIB_SOURCES xmt_main.c)
 collect (PROJECT_LIB_SOURCES xmt_read_eye.c)
