lib: sw_apps: zynqmp_dram_test: Update APP_NAME variable to inline with app name
Update APP_NAME variable to inline with template app name.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/zynqmp_dram_test/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_dram_test/src/CMakeLists.txt
@@ -11,7 +11,7 @@ set(USER_LINKER_FLAGS
 )
 ####    END OF USER SETTINGS    ####
 
-set(APP_NAME zynqmp_dramtest)
+set(APP_NAME zynqmp_dram_test)
 project(${APP_NAME})
 
 enable_language(C ASM)
