lib: sw_apps: Add c++ compilation support in empty application and hello_world application
While compiling source code detect the file extension and link the
compiler based on the file type.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/empty_application/src/CMakeLists.txt
+++ b/lib/sw_apps/empty_application/src/CMakeLists.txt
@@ -15,23 +15,41 @@ set(APP_NAME empty_application)
 project(${APP_NAME})
 
 find_package(common)
-enable_language(C ASM)
+enable_language(C ASM CXX)
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
 collect(PROJECT_LIB_DEPS xiltimer)
 collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
+
+aux_source_directory(${CMAKE_SOURCE_DIR} SOURCES)
+foreach (source ${SOURCES})
+    get_filename_component(ext ${source} EXT)
+    list(APPEND src_ext ${ext})
+endforeach()
+
+if (".cpp" IN_LIST src_ext)
+    set(PROJECT_TYPE "c++")
+else()
+    set(PROJECT_TYPE "c")
+endif()
+
+if("${PROJECT_TYPE}" STREQUAL "c++")
+collect(PROJECT_LIB_DEPS stdc++)
+endif()
 collector_list (_deps PROJECT_LIB_DEPS)
 
+if("${PROJECT_TYPE}" STREQUAL "c++")
+string (REPLACE ";" ",-l" _deps "${_deps}")
+endif()
 if(CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
     set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
-aux_source_directory(${CMAKE_SOURCE_DIR} SOURCES)
 linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
 string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
 if(NOT "${SOURCES}" STREQUAL "")
 add_executable(${APP_NAME}.elf ${SOURCES})
-target_link_libraries(${APP_NAME}.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
 endif()
