Fix header inclusions
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_services/xilsecure/src/common/versal_common/server/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/common/versal_common/server/CMakeLists.txt
@@ -1,12 +1,12 @@
 collect (PROJECT_LIB_SOURCES xsecure_aes.c)
 collect (PROJECT_LIB_HEADERS xsecure_aes.h)
-collect (PROJECT_LIB_HEADERS xsecure_aes_core_hw.h)
 collect (PROJECT_LIB_SOURCES xsecure_aes_ipihandler.c)
-collect (PROJECT_LIB_HEADERS xsecure_aes_ipihandler.h)
+collect (PROJECT_LIB_HEADERS xsecure_aes_core_hw.h)
 collect (PROJECT_LIB_SOURCES xsecure_cmd.c)
+collect (PROJECT_LIB_HEADERS xsecure_aes_ipihandler.h)
+collect (PROJECT_LIB_HEADERS xsecure_cryptochk.h)
 collect (PROJECT_LIB_HEADERS xsecure_cmd.h)
 collect (PROJECT_LIB_SOURCES xsecure_cryptochk.c)
-collect (PROJECT_LIB_HEADERS xsecure_cryptochk.h)
 collect (PROJECT_LIB_HEADERS xsecure_ecdsa_rsa_hw.h)
 collect (PROJECT_LIB_SOURCES xsecure_elliptic.c)
 collect (PROJECT_LIB_HEADERS xsecure_elliptic.h)
@@ -26,7 +26,9 @@ collect (PROJECT_LIB_SOURCES xsecure_rsa_ipihandler.c)
 collect (PROJECT_LIB_HEADERS xsecure_rsa_ipihandler.h)
 collect (PROJECT_LIB_SOURCES xsecure_sha.c)
 collect (PROJECT_LIB_HEADERS xsecure_sha.h)
+collect (PROJECT_LIB_SOURCES xsecure_sss.c)
 collect (PROJECT_LIB_SOURCES xsecure_sha_ipihandler.c)
 collect (PROJECT_LIB_HEADERS xsecure_sha_ipihandler.h)
-collect (PROJECT_LIB_SOURCES xsecure_sss.c)
+collect (PROJECT_LIB_SOURCES xsecure_utils.c)
 collect (PROJECT_LIB_HEADERS xsecure_sss.h)
+collect (PROJECT_LIB_HEADERS xsecure_utils.h)
