--- a/lib/sw_services/xilsecure/src/zynqmp/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/zynqmp/CMakeLists.txt
@@ -15,3 +15,5 @@ collect (PROJECT_LIB_SOURCES xsecure_sss.c)
 collect (PROJECT_LIB_HEADERS xsecure_sss.h)
 collect (PROJECT_LIB_SOURCES xsecure_cryptochk.c)
 collect (PROJECT_LIB_HEADERS xsecure_cryptochk.h)
+collect (PROJECT_LIB_SOURCES xsecure_utils.c)
+collect (PROJECT_LIB_HEADERS xsecure_utils.h)
